--- a/index.html
+++ b/index.html
@@ -18,17 +18,26 @@
     <button style="background-color: palegreen">I AM BUTTON</button>
     <button style="background-color: palegreen">Another button!</button> -->
     
-    <h2>I am an h2</h2>
-    <h2>I am an h2</h2>
-    <h2>I am an h2</h2>
+<!--    <h2>I am an h2</h2>-->
+<!--    <h2>I am an h2</h2>-->
+<!--    <h2>I am an h2</h2>-->
 
-    <button style="background-color: palegreen">I AM BUTTON</button>
-    <button style="background-color: palegreen">Another button!</button>
+<!--    <button style="background-color: palegreen">I AM BUTTON</button>-->
+<!--    <button style="background-color: palegreen">Another button!</button>-->
+
+<!--    <p>-->
+<!--        The chicken is a domesticated junglefowl species, with attributes of wild species such as the grey and the Ceylon junglefowl -->
+<!--        that are originally from Southeastern Asia. Rooster or cock is a term for an adult male bird, and a younger male may be called-->
+<!--         a cockerel. A male that has been castrated is a capon-->
+<!--    </p>-->
+
+    <h1>Cuttlefish</h1>
 
     <p>
-        The chicken is a domesticated junglefowl species, with attributes of wild species such as the grey and the Ceylon junglefowl 
-        that are originally from Southeastern Asia. Rooster or cock is a term for an adult male bird, and a younger male may be called
-         a cockerel. A male that has been castrated is a capon
+        Cuttlefish or cuttles[2] are marine molluscs of the order <a href="">Sepiida</a>. They belong to the class Cephalopoda which also includes squid, octopuses,
+        and nautiluses. Cuttlefish have a unique internal shell, the cuttlebone, which is used for control of buoyancy.Cuttlefish have large, W-shaped pupils,
+        eight arms, and two tentacles furnished with denticulated suckers, with which they secure their prey. They generally range in size from 15 to 25 cm
+        (6 to 10 in), with the largest species, the giant cuttlefish (Sepia apama), reaching 50 cm (20 in) in mantle length and over 10.5 kg (23 lb) in mass.[3]
     </p>
 
 
